bridge/base/n8n-deployment.yaml
#! n8n-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: n8n
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: n8n
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: docker
            com.docker.compose.service: n8n
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: docker
                com.docker.compose.service: n8n
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: n8n-infrastructure
                  image: n8nio/n8n:1.53.1
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -fsS http://localhost:6543/healthz']
                    periodSeconds: 30
                    timeoutSeconds: 10
                    failureThreshold: 5
                  ports:
                    - name: n8n-5678
                      containerPort: 5678
                    - name: n8n-6543
                      containerPort: 6543
                  volumeMounts:
                    - name: home-node--n8n
                      mountPath: /home/node/.n8n
                    - name: data-workflows
                      mountPath: /data/workflows
                    - name: data-knowledge
                      mountPath: /data/knowledge
            volumes:
                - name: home-node--n8n
                  persistentVolumeClaim:
                    claimName: n8n-n8n-data
                - name: data-workflows
                  hostPath:
                    path: /Users/danilonovais/N8N-Infrastructure/workflows
                - name: data-knowledge
                  hostPath:
                    path: /Users/danilonovais/N8N-Infrastructure/knowledge
