bridge/base/n8n-service.yaml
# check if there is at least one published port

#! n8n-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: n8n-published
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: n8n
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: n8n
    ports:
        - name: n8n-6543
          port: 6543
          protocol: TCP
          targetPort: n8n-6543

# check if there is at least one published port
